feat: creaturehandler swaggo docs
