# docs/swagger.json
@@ -9,6 +9,203 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/creature": {
+            "get": {
+                "description": "Cria uma magia com nome, descrição, elemento e custo de mana",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spells"
+                ],
+                "summary": "Cria uma nova magia",
+                "parameters": [
+                    {
+                        "description": "Dados da magia",
+                        "name": "spell",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.SpellModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Criatura ensina uma magia",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "creatures"
+                ],
+                "summary": "Criatura ensina uma nova magia",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id da criatura",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "id da magia",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/creature/{id}": {
+            "get": {
+                "description": "Cria uma magia com nome, descrição, elemento e custo de mana",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spells"
+                ],
+                "summary": "Cria uma nova magia",
+                "parameters": [
+                    {
+                        "description": "Dados da magia",
+                        "name": "spell",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.SpellModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Cria uma magia com nome, descrição, elemento e custo de mana",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spells"
+                ],
+                "summary": "Cria uma nova magia",
+                "parameters": [
+                    {
+                        "description": "Dados da magia",
+                        "name": "spell",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.SpellModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Cria uma magia com nome, descrição, elemento e custo de mana",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spells"
+                ],
+                "summary": "Cria uma nova magia",
+                "parameters": [
+                    {
+                        "description": "Dados da magia",
+                        "name": "spell",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.SpellModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/spell": {
             "get": {
                 "produces": [
@@ -100,7 +297,7 @@
                 "tags": [
                     "spells"
                 ],
-                "summary": "Lista magias por elento",
+                "summary": "Lista magias por elemento",
                 "parameters": [
                     {
                         "type": "string",
@@ -198,6 +395,35 @@
         }
     },
     "definitions": {
+        "api.CreatureModel": {
+            "type": "object",
+            "properties": {
+                "attack_creature": {
+                    "type": "integer"
+                },
+                "defence_creature": {
+                    "type": "integer"
+                },
+                "description_creature": {
+                    "type": "string"
+                },
+                "hp_creature": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name_creature": {
+                    "type": "string"
+                },
+                "teach_spell": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.SpellModel"
+                    }
+                }
+            }
+        },
         "api.Response": {
             "type": "object",
             "properties": {
